syntax = "proto3";
package api.v1;
option go_package = "api/v1";

service EchoSphereTransmissionService {
  rpc Transmit(stream EchoSphereTransmissionServiceTransmitRequest) returns (stream EchoSphereTransmissionServiceTransmitResponse);
}

message Message{
  string from = 1;
  string content = 3;
}
message Ack{
  string from = 1;
  string to = 2;
  string content = 3;
}

message EchoSphereTransmissionServiceTransmitRequest {
  oneof incoming_data  {
    Message message=1;
    Ack ack=2;
  }
}

message EchoSphereTransmissionServiceTransmitResponse {
  oneof outgoing_data  {
    Message message=1;
    Ack ack=2;
  }
}